samples/_failures_safe/1761252637_c57ad4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89e8fa60.c: In function ‘main’:
./samples/SAFE/__tmp_89e8fa60.c:151:21: error: expected declaration or statement at end of input
  151 |                     printf("Error: Integer overflow during multiplication.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_89e8fa60.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_89e8fa60.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_89e8fa60.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_89e8fa60.c:151:21: error: expected declaration or statement at end of input
